--- a/package.json
+++ b/package.json
@@ -20,13 +20,16 @@
   "dependencies": {
     "amqplib": "^0.10.3",
     "axios": "^1.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.9.0",
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.2",
     "node-schedule": "^2.1.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui-express": "^5.0.0",
+    "valid-url": "^1.0.9"
   }
 }
