--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "mongoose": "^7.4.2",
     "node-schedule": "^2.1.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0",
-    "valid-url": "^1.0.9"
+    "swagger-ui-express": "^5.0.0"
   }
 }
