--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
     "@types/mongoose": "^5.11.97",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3",
+    "jest": "^29.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
   },
@@ -27,8 +33,6 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.2",
-    "node-schedule": "^2.1.1",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.0"
+    "node-schedule": "^2.1.1"
   }
 }
